overflow bug fix

--- a/app/assets/stylesheets/layout/_application.scss
+++ b/app/assets/stylesheets/layout/_application.scss
@@ -46,7 +46,6 @@ body > main {
   @include grid-column(16);
   .main-header, .main-section{
     @include grid-collapse;
-    overflow: hidden;
   }
   .main-header{
     @include shadow-down($light-shadow, 1);
